--- a/package.json
+++ b/package.json
@@ -1,8 +1,38 @@
 {
-  "name": "parrot-sdk",
+  "name": "@parrotfi/sdk",
   "version": "1.0.0",
   "description": "A typescript sdk for parrot.fi",
   "main": "dist/index.js",
-  "author": "@gopartyparrot",
-  "license": "MIT"
+  "types": "dist/index.d.ts",
+  "author": "mosspig323",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "prepublish": "yarn build"
+  },
+  "dependencies": {
+    "@project-serum/anchor": "0.5.0",
+    "@project-serum/associated-token": "0.1.1",
+    "@project-serum/common": "0.0.1-beta.3",
+    "@solana/spl-token": "0.1.3",
+    "bignumber.js": "9.0.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "jest": "27.0.3",
+    "typescript": "4.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gopartyparrot/parrot-sdk.git"
+  },
+  "keywords": [
+    "parrot.fi",
+    "program",
+    "sdk"
+  ],
+  "bugs": {
+    "url": "https://github.com/gopartyparrot/parrot-sdk/issues"
+  },
+  "homepage": "https://github.com/gopartyparrot/parrot-sdk#readme"
 }
