--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "outDir": "./dist",
     "jsx": "react"
   },
+  "include": ["./src/*", "./src/**/*.json"],
   "exclude": ["node_modules", "dist"]
 }
