--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@parrotfi/sdk",
+  "name": "@parrotfi/core",
   "version": "1.0.0",
   "description": "A typescript sdk for parrot.fi",
   "main": "dist/index.js",
@@ -7,8 +7,8 @@
   "author": "mosspig323",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "prepublish": "yarn build"
+    "prebuild": "rimraf ./dist",
+    "build": "tsc"
   },
   "dependencies": {
     "@project-serum/anchor": "0.5.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "jest": "27.0.3",
+    "rimraf": "^3.0.2",
     "typescript": "4.3.2"
   },
   "repository": {
