--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "@parrotfi/core",
   "version": "1.0.0",
   "description": "A typescript sdk for parrot.fi",
+  "workspaces": [
+    "packages/*"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "mosspig323",
@@ -9,13 +11,6 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "tsc"
-  },
-  "dependencies": {
-    "@project-serum/anchor": "0.5.0",
-    "@project-serum/associated-token": "0.1.1",
-    "@project-serum/common": "0.0.1-beta.3",
-    "@solana/spl-token": "0.1.3",
-    "bignumber.js": "9.0.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
