--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "description": "A typescript sdk for parrot.fi",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
@@ -9,8 +10,10 @@
   "author": "mosspig323",
   "license": "MIT",
   "scripts": {
-    "prebuild": "rimraf ./dist",
-    "build": "tsc"
+    "core:build": "yarn workspace @parrotfi/core build",
+    "core:publish": "yarn workspace @parrotfi/core publish",
+    "wasm:build": "yarn workspace @parrotfi/wasm build",
+    "wasm:publish": "yarn workspace @parrotfi/wasm publish"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
