--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@parrotfi/core",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "A typescript sdk for parrot.fi",
 	"workspaces": [
 		"packages/*"
@@ -11,7 +11,8 @@
 	"license": "MIT",
 	"scripts": {
 		"prebuild": "rimraf ./dist",
-		"build": "tsc"
+		"build": "tsc",
+		"publish": "yarn npm publish --access public"
 	},
 	"dependencies": {
 		"@project-serum/anchor": "0.5.0",
