--- a/packages/wasm/package.json
+++ b/packages/wasm/package.json
@@ -16,7 +16,8 @@
 		"prebuild": "rimraf ./dist && make nodejs",
 		"build": "tsc -p ./tsconfig.json",
 		"postbuild": "cp ./lib/*.wasm ./dist",
-		"publish": "yarn npm publish --access public"
+		"prepublish": "yarn build",
+		"publish": "npm publish --access public"
 	},
 	"dependencies": {
 		"@project-serum/anchor": "0.5.0",
